Neue Funktionen : Von der Adminseite aus können Patientendaten von nun an geändert und gelöscht werden

--- a/ATOS Projekt/Admin Seite/HTML/adminIndex.html
+++ b/ATOS Projekt/Admin Seite/HTML/adminIndex.html
@@ -21,28 +21,28 @@
 
   <body>
     <div class="container mt-5">
-        <img src="../../Images/ATOS_Logo.jpg" class="img-fluid">
         
-        <div class="row">
-          <h3>Für welche Station möchten Sie die Bestellungen einsehen?</h3>
-          <div class="col-sm-6">
-            <a href="adminKueche.php" class="btn btn-primary btn-lg btn-block">Küche</a>
+      <div class="px-4 py-5 my-5 text-center">
+          <img src="../../Images/ATOS_Logo.jpg" class="img-fluid">
+          <h3>Für welchen Bereich möchten Sie Bestellungen einsehen?</h3>
+          <div class="col-lg-6 mx-auto">
+              <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <div>
+                  <a href="adminKueche.php" class="btn btn-outline-secondary btn-lg btn-block">Küche</a>
+                  <a href="adminPflege.php" class="btn btn-outline-secondary btn-lg btn-block">Pflegestation</a>
+                </div>
+              </div>
           </div>
-          <div class="col-sm-6">
-            <a href="adminPflege.php" class="btn btn-primary btn-lg btn-block">Pflegestation</a>
-          </div>
-        </div>
-        <div class="row"><br></div>
-        <div class="row">
+          <br>
+          <br>
           <h3>Möchten Sie Datensätze ändern?</h3>
-          <div class="col-sm-6">
-            <a href="adminDaten.php" class="btn btn-primary btn-lg btn-block">Zimmernummer eines Patienten</a>
+          <div class="col-lg-6 mx-auto">
+              <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                  <a href="adminDaten.php" class="btn btn-outline-secondary btn-lg btn-block">Datensätze ändern</a>
+              </div>
           </div>
-          <div class="col-sm-6">
-            <a href="adminDatenLoeschen.php" class="btn btn-primary btn-lg btn-block">Abgelaufene Datensätze entfernen</a>
-          </div>
-        </div>
-    </div>
+      </div>
+  </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
